--- a/Views/Home/LienHe.cshtml
+++ b/Views/Home/LienHe.cshtml
@@ -4,15 +4,19 @@
 <main aria-labelledby="title">
     <h2 id="title">@ViewBag.Title.</h2>
 
-
     <address>
-        132, Tôn Thất Thuyết,<br />
-        Quận 12, TP. Hồ Chí Minh.<br />
-        Hotline: 1911.100.200 <br />
+        Khu Công nghệ cao Xa Lộ Hà Nội,<br />
+        Hiệp Phú, Thủ Đức, Thành phố Hồ Chí Minh.<br />
+        Hotline: (028) 5445.2222 <br />
     </address>
 
     <address>
-        <strong>Địa chỉ mail:</strong>   <a href="mailto:Support@example.com">nhakhoaquangvu@gmail.com</a><br />
+        <strong>Địa chỉ mail   :</strong>   <a href="mailto:Support@example.com">nhakhoaquangvu@gmail.com</a><br />
         <strong>Địa chỉ website:</strong> <a href="mailto:Marketing@example.com">nhakhoaquangvu.io.vn</a>
     </address>
+
+    <div class="container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1647.4958000049492!2d106.78451288004783!3d10.85505699455519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175276e7ea103df%3A0xb6cf10bb7d719327!2zSFVURUNIIC0gxJDhuqFpIGjhu41jIEPDtG5nIG5naOG7hyBUUC5IQ00gKFRodSBEdWMgQ2FtcHVzKQ!5e0!3m2!1svi!2s!4v1712667175017!5m2!1svi!2s" width="500" height="380" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
 </main>
