--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,15 +13,15 @@
 
     <div class="row mt-4">
         <section class="col-md-6" aria-labelledby="gettingStartedTitle">
-            <h2 id="gettingStartedTitle">Bảng Giá Dịch Vụ</h2>
+            <h2 id="gettingStartedTitle">Đặt Hẹn Dịch Vụ</h2>
             <p>
                 Tham khảo chi phí cho các dịch vụ, chúng tôi cam kết giá đúng như được thông tin.
             </p>
-            <p><a class="btn btn-outline-dark" href="@Url.Action("BangGia", "Home")">Xem ngay &raquo;</a></p>
+            <p><a class="btn btn-outline-dark" href="@Url.Action("BangGia", "Home")">Chọn dịch vụ ngay &raquo;</a></p>
         </section>
         <section class="col-md-6" aria-labelledby="librariesTitle">
             <h2 id="librariesTitle">Đặt Hẹn</h2>
-            <p>Hãy để lại thông tin liên lạc của bạn và chúng tôi có thể đặt lịch khám cho bạn.</p>
+            <p>Hãy đặt lịch khám cho bạn và chúng tôi sẽ liên hệ cho bạn cách sớm nhất.</p>
             <p><a class="btn btn-outline-dark" href="@Url.Action("Index", "ShoppingCart")">Đặt ngay &raquo;</a></p>
         </section>
     </div>
