--- a/Views/ShoppingCart/Index.cshtml
+++ b/Views/ShoppingCart/Index.cshtml
@@ -39,7 +39,7 @@
 </head>
 <body>
 
-    <h2>Giỏ hàng của bạn</h2>
+    <h2>Danh Sách Dịch Vụ Đặt Hẹn</h2>
     <table>
         <tr>
             <th>Dịch Vụ</th>
