--- a/Views/Home/Search.cshtml
+++ b/Views/Home/Search.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<NhaKhoaQuangVu.Models.BangGia>
+﻿
+
+@model IEnumerable<NhaKhoaQuangVu.Models.BangGia>
 <br />
 <h2>Danh Sách Dịch Vụ</h2>
 <div class="container">
@@ -11,13 +13,11 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title" style="color:deepskyblue">@bangGia.TenDichVu</h5>
-                        <p class="card-text fw-bold">Giá dịch vụ: @bangGia.GiaDichVu</p>
+                        <p class="card-text fw-bold">Giá dịch vụ: @string.Format("{0:N0} VND", bangGia.GiaDichVu)</p>
                         <p class="card-text">@bangGia.MoTa</p>
                         <div>
                             <a asp-controller="ShoppingCart" asp-action="AddToCart" asp-route-productID="@bangGia.MaDichVu" asp-route-quantity="1">
-                                <button class="btn btn-success me-2">
-                                    <i class="bi-cart-fill me-1"></i> Đặt Dịch Vụ
-                                </button>
+                                <button class="btn btn-success me-2">Đặt Dịch Vụ</button>
                             </a>
                         </div>
                     </div>
