---- BIG UPDATE THÁNG 05 ---- * Chỉnh sửa giao diện rất nhiều. * Thêm chức năng đặt hẹn. * Thêm chức năng tìm kiếm AutoComplete. * Chỉnh sửa thêm nhiều cái lặt vặt.

--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 
     <style>
         .footer-spacing {
-            margin-top: 50px; /* Thay đổi giá trị theo nhu cầu của bạn */
+            margin-top: 50px; 
         }
     </style>
 </head>
