--- a/Areas/Employee/Views/Shared/_Layout.cshtml
+++ b/Areas/Employee/Views/Shared/_Layout.cshtml
@@ -48,6 +48,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-danger" asp-area="Employee" asp-controller="Order" asp-action="Index">Quản Lý Lịch Hẹn</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-danger" asp-area="Employee" asp-controller="LichHen" asp-action="Index">Lịch Hẹn Mới</a>
+                                </li>
                             }
                         }
                     
@@ -90,7 +93,6 @@
             </div>
         </div>
     </footer>
-
 
 
 
