--- a/Views/Home/Search.cshtml
+++ b/Views/Home/Search.cshtml
@@ -1,6 +1,24 @@
-﻿
+﻿@model IEnumerable<NhaKhoaQuangVu.Models.BangGia>
 
-@model IEnumerable<NhaKhoaQuangVu.Models.BangGia>
+@section Scripts {
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+        $(function () {
+            $("#autocomplete").autocomplete({
+                source: '/Home/AutocompleteSearch'
+            });
+        });
+    </script>
+}
+
+<style>
+    .bg-light-blue {
+        background-color: #e0f7fa; /* Màu xanh nhạt */
+    }
+</style>
+
 <br />
 <h2>Danh Sách Dịch Vụ</h2>
 <div class="container">
@@ -10,19 +28,23 @@
         {
             <div class="col mb-4">
                 <!-- Thêm lớp mb-4 để tạo khoảng cách giữa các hàng -->
-                <div class="card">
+                <div class="card bg-light-blue">
                     <div class="card-body">
                         <h5 class="card-title" style="color:deepskyblue">@bangGia.TenDichVu</h5>
                         <p class="card-text fw-bold">Giá dịch vụ: @string.Format("{0:N0} VND", bangGia.GiaDichVu)</p>
                         <p class="card-text">@bangGia.MoTa</p>
-                        <div>
-                            <a asp-controller="ShoppingCart" asp-action="AddToCart" asp-route-productID="@bangGia.MaDichVu" asp-route-quantity="1">
-                                <button class="btn btn-success me-2">Đặt Dịch Vụ</button>
-                            </a>
-                        </div>
                     </div>
                 </div>
             </div>
         }
     </div>
 </div>
+
+<div id="smallPopup" class="popup">
+    <div class="popup-content">
+        <p>Thêm thành công.</p>
+    </div>
+</div>
+
+<link rel="stylesheet" href="~/css/site.css">
+<script src="~/js/site.js"></script>
